# feast-pocs

./: README.md  pyproject.toml
app/feature_repo/: example_repo.py  feature_store.yaml
app/feature_repo/data/: driver_stats.parquet
