[tool.poetry]
name = "feast-pocs"
version = "1.0.0"
description = "Playing with Feast Feature Store and its functionalities."
authors = ["Julian Boronat <boronat.j.e@gmail.com>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
feast = {extras = ["aws"], version = "^0.37.1"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"